[project]
name = "ai-agent-neon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.8.1",
    "gradio>=5.38.2",
    "groq>=0.30.0",
    "gtts>=2.5.4",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.6.0",
    "openai>=1.97.1",
    "opencv-python>=4.12.0.88",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.1",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
]
